tests/ui/macros/macro-stability.stderr
error[E0658]: use of unstable library feature `local_unstable`
  --> $DIR/macro-stability.rs:22:5
   |
LL |     local_unstable!();
   |     ^^^^^^^^^^^^^^
   |
   = help: add `#![feature(local_unstable)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: use of unstable library feature `local_unstable`
  --> $DIR/macro-stability.rs:23:5
   |
LL |     local_unstable_modern!();
   |     ^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add `#![feature(local_unstable)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: use of unstable library feature `unstable_macros`
  --> $DIR/macro-stability.rs:24:5
   |
LL |     unstable_macro!();
   |     ^^^^^^^^^^^^^^
   |
   = help: add `#![feature(unstable_macros)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

warning: use of deprecated macro `deprecated_macro`: deprecation note
  --> $DIR/macro-stability.rs:27:5
   |
LL |     deprecated_macro!();
   |     ^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(deprecated)]` on by default

warning: use of deprecated macro `local_deprecated`: local deprecation note
  --> $DIR/macro-stability.rs:29:5
   |
LL |     local_deprecated!();
   |     ^^^^^^^^^^^^^^^^

error: aborting due to 3 previous errors; 2 warnings emitted

For more information about this error, try `rustc --explain E0658`.
